<resources>
    <string name="app_name">Semar Undip</string>
    <string name="navdrawer_open">Open navigation drawer</string>
    <string name="navdrawer_close">Close navigation drawer</string>
    <string name="bold1"><b>Cara Booking</b></string>
    <string name="bold2"><b>Cara Melakukan Booking</b></string>
    <string name="hyperlink_sso1">01. Login melalui <a href="https://sso.undip.ac.id/">sso.undip.id.</a> Apabila belum memiliki akun <a href="https://sso.undip.ac.id/">sso.undip.id,</a> silakan mendaftar terlebih dahulu.</string>
    <string name="hyperlink_home1">03. Pilih kamar di halaman <a href="#">Home</a> sesuai jenis kelamin. Kamar tidak akan tampil jika memilih kamar tidak sesuai jenis kelamin.</string>
    <string name="hyperlink_booking1">05. Tekan tombol <a href="#">Booking Sekarang</a> untuk menampilkan detail pesanan.</string>
    <string name="hyperlink_prosespesanan1">06. Setelah tampil detail pesanan, tekan tombol <a href="#">Proses Pesanan Saya</a> dan lanjutkan proses pembayaran.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="visi">• Mewujudkan sarana tempat tinggal sementara yang murah dengan kualitas hidup yang lebih baik bagi mahasiswa agar bias menyesuaikan diri dengan lingkungan sehingga kampus Undip menjadi kehidupan yang dinamis guna menjamin iklim yang kondusif bagi masyarakat akademik.</string>
    <string name="misi1">• Menjadikan Rumah Susun Sederhana Sewa bagi Mahasiswa Undip sebagai tempat tinggal sementara untuk dapat menuntut ilmu dalam suasana kondusif.</string>
    <string name="misi2">• Menjadikan Rumah Susun Sederhana Sewa bagi Mahasiswa Undip sebagai sarana interaksi dan sosialisasi antar mahasiswa yang datang dari berbagai daerah di seluruh Indonesia.</string>
    <string name="misi3">• Menjadikan Rumah Susun Sederhana Sewa bagi Mahasiswa Undip sebagai tempat tinggal sementara dengan biaya hidup yang terjangkau tanpa mengurangi standar kenyamanan dan keamanan.</string>
    <string name="landasan_hukum1">1.  Keputusan Rektor Universitas Diponegoro Nomor : 447.A/SK/J.07/2007 Tanggal 10 September 2007 Tentang Pembentukan Badan Pengelola Rumah Susun Sederhana Sewa (BP - Rusunawa) Universitas Diponegoro.</string>
    <string name="landasan_hukum2">2.  Keputusan Rektor Universitas Diponegoro Nomor : 448.A/SK/J.07/2007 Tanggal 10 September 2007. Tentang Susunan Organisasi dan Tata Kerja Badan Pengelola Rumah Susun Sederhana Sewa (BP-Rusunawa) Universitas Diponegoro.</string>
    <string name="landasan_hukum3">3.  Keputusan Rektor Universitas Diponegoro Nomor : 449.A/SK/J.07/2007 Tanggal 10 September 2007. Tentang Pedoman Umum Pemanfaatan Rumah Susun Sederhana sewa Universitas Diponegoro Tahun 2007.</string>
    <string name="landasan_hukum4">4.  Keputusan Rektor Universitas Diponegoro Nomor : 054/SK/H7/2008 Tanggal 28 Januari 2008. Tentang Pengurus Badan Pengelola Rumah Susun Sederhana Sewa Universitas Diponegoro Tahun 2008.</string>
    <string name="landasan_hukum5">5.  Keputusan Rektor Universitas Diponegoro Nomor : 540 A/SK/H72009 Tanggal 13 Oktober 2009. Tentang Pengangkatan Sebagai Pengurus Badan Pengelola Rumah Susun Sederhana Sewa Universitas Diponegoro Tahun 2009.</string>
    <string name="landasan_hukum6">6.  Keputusan Rektor Universitas Diponegoro Nomor : 08/SK/H7/2010 Tanggal 11 Januari 2010. Tentang Pengangkatan Sebagai Pengurus Badan Pengelola Rumah Susun Sederhana Sewa Universitas Diponegoro Tahun 2010.</string>
    <string name="landasan_hukum7">7.  Keputusan Rektor Universitas Diponegoro Nomor : 223/SK/UN7/2011 Tanggal 20 April 2011. Tentang Penetapan Besaran Biaya Perawatan Sarana Prasarana Milik Rumah Susun Sederhana Sewa Mahasiswa (Rusunawa) Universitas Diponegoro.</string>
    <string name="landasan_hukum8">8.  Keputusan Rektor Universitas Diponegoro Nomor : 331/SK/UN7/2011. Tentang Pencabutan Keputusan Rektor Nomor 668/SK/H7/2009 Dan Penerbitan Kembali Keputusan Rektor Tentang Penetapan Besaran Tarif Sewa Hunian Rumah Susun Sederhana Sewa Mahasiswa (Rusunawa) Universitas Diponegoro.</string>
    <string name="landasan_hukum9">9.  Keputusan Rektor Universitas Diponegoro Nomor : 383/SK/UN7/2011. Tentang Pengangkatan Sebagai Pengurus Badan Pengelola Rumah Susun Sederhana Sewa Universitas Diponegoro Tahun 2011.</string>
    <string name="landasan_hukum10">10.  Keputusan Rektor Universitas Diponegoro Nomor : 571 /SK/UN7/2012. Tentang Pengangkatan Sebagai Pengurus Badan Pengelola Rumah Susun Sederhana Sewa Universitas Diponegoro Tahun 2012.</string>
    <string name="landasan_hukum11">11.  Keputusan Rektor Universitas Diponegoro Nomor : 616/SK/UN7/2013. Tentang Penetapan Peringkat Dan Pemberian Penghargaan Lomba Penataan Lingkungan Kampus Universitas Diponegoro Tahun 2013.</string>
    <string name="landasan_hukum12">12.  Keputusan Rektor Universitas Diponegoro Nomor : 431 /SK/UN7/KP/2014 Tentang Pengangkatan Ketua dan Sekretaris Badan Pengelola Rumah Susun Sederhana Sewa (BP - Rusunawa) Tahun 2014.</string>
    <string name="landasan_hukum13">13.  Keputusan Rektor Universitas Diponegoro Nomor: 130 /SK/UN7/KP/2015 Tentang Pengangkatan Ketua dan Sekretaris Badan Pengelola Rumah Susun Sederhana Sewa (BP - Rusunawa) Tahun 2015.</string>
    <string name="landasan_hukum14">14.  Keputusan Rektor Universitas Diponegoro Nomor : 1970/UN7.P/HK/2016 Tanggal 30 Desember 2016. Tentang Persyaratan, Tarif Dan Tata Tertib Hunian Rusunawa Universitas Diponegoro Tahun 2016</string>
    <string name="landasan_hukum15">15.  Keputusan Rektor Universitas Diponegoro Nomor : 268/UN7.P/KP/2017. Tanggal 6 Juli 2017. Tentang Pengangkatan Ketua Badan Pengelola Satuan Usaha dan Pengelola Pada Badan Pengelola Di Lingkungan Universitas Diponegoro Tahun 2017.</string>
    <string name="landasan_hukum16">16.  Keputusan Rektor Universitas Diponegoro Nomor : 60/UN7.P/KP/2018 Tentang Pengangkatan Ketua dan Sekretaris Badan Pengelola Satuan Usaha Dan Pengelola Badan Pengelola Pada Universitas Diponegoro Tahun 2018.</string>
    <string name="landasan_hukum17">17.  Keputusan Rektor Universitas Diponegoro Nomor : 57/UN7.P/KP/2019 Tanggal 31 Januari 2019 Tentang Pengangkatan Ketua Badan Pengelola Satuan Usaha Dan Pengelola Badan Pengelola Pada Universitas Diponegoro Tahun 2019.</string>
    <string name="landasan_hukum18">18.  Keputusan Rektor Universitas Diponegoro Nomor: 1468/UN7.P/HK/2019 Tanggal 24 Oktober 2019 Tentang Penetapan Tarif Dan Peraturan Hunian Rusunawa Universitas Diponegoro.</string>
    <string name="landasan_hukum19">19.  Keputusan Rektor Universitas Diponegoro Nomor : 4568/UN7.P/KP/2019 Tanggal 27 Desember 2019 Tentang Pengangkatan Ketua Badan Pengelola Satuan Usaha (BPSU), Ketua Dan Sekretaris Badan Pelaksana Pada Universitas Diponegoro Tahun 2020.</string>
    <string name="sejarah1">      Pada awal tahun 2003 Universitas Diponegoro kedatangan tamu dari Kementerian Pekerjaan Umum Jakarta, membahas permohonan surat bantuan Rumah Susun Sederhana Sewa (Rusunawa) khusus untuk mahasiswa. Ternyata salah satu pimpinan rombongan adalah teman lama / adik kelas ketika masih sekolah di SMA. Cerita panjang lebar akhirnya pertengahan bulan juni 2003 ada kabar yang baik bahwa tahun 2003/2004, Undip akan mendapatkan bantuan Gedung 2 (dua) twinblok, 1 (satu) twinblok bantuan dari Kementerian perumahan Rakyat (Menpera) dan 1 (satu) twinblok dari kementerian Pekerjaan Umum (PU). Ada beberapa persyaratan saat itu bahwa Universitas Diponegoro diminta untuk menyediakan lahan, memasang jaringan listrik dan mengurus ijin bangunan (IMB).</string>
    <string name="sejarah2">      Pembantu Rektor II saat itu Prof. Dr. Ir. YS. Darmanto, M.Sc dibantu oleh kepada bagian Tarkum dan Prof. Dr. Ir. Bambang Setioko. M.Eng dengan sigap mempersiapkan lahan 4,7 hektar dan mempersiapkan persyaratan yang diminta serta mensosialisasikan kepada masyarakat di sekitar kampus. Warga Tembalang dan Bulusan kurang setuju dengan adanya Rusunawa karena akan menjadi kompetitor masyarakat Tembalang dan Bulusan dalam usaha indekost. Setelah Pemerintah Kota Semarang mengadakan temu warga antara wakil dari desa Tembalang dan Bulusan dengan wakil dari Undip, yang di selenggarakan di Kotamadya Semarang. Akhirnya ada kesepakatan tidak keberatan bahwa Undip membangun Rusunawa. Pada awal bulan agustus tahun 2003, utusan dari Kementerian Pekerjaan Umum (PU) datang lagi untuk membahas gambar yang telah dipersiapkan untuk mendapatkan masukan dari Undip tentang design, serta Kementerian Pekerjaan Umum (PU) meminta PR II dan Prof. Dr. Ir. Bambang Setioko, M.Eng ditunjuk sebagai direksi dalam pelaksanaan pembangunan.</string>
    <string name="sejarah3">      Pembangunan Rusunawa adalah salah satu solusi dalam penyediaan tempat tinggal sementara, layak huni untuk mahasiswa yang sedang belajar di Universitas Diponegoro dengan harga murah dan fasilitas yang cukup memadai. Pada tahun 2004 Rektor Universitas Diponegoro menerima bantuan 2 (dua) gedung (twinblok) untuk hunian mahasiswa terdiri gedung A 84 kamar dan Gedung C 96 kamar. Gedung A yang dibangun oleh Kementerian Perumahan Rakyat (Kemenpera). Gedung C dibangun oleh Kementerian Pekerjaan Umum (PU). Gedung A rencana akan dialokasikan untuk mahasiswa putra, sedangkan Gedung C dipergunakan untuk mahasiswa putri.</string>
    <string name="sejarah4">      Tahun 2005 Pengerjaan pembangunan Gedung B dan D akan dimulai, kedua-duanya akan di bangun atas bantuan Kementerian Pekerjaan Umum (PU). Gedung D diperuntukan mahasiswa putri, dengan kapasitas 96 (Sembilan puluh enam) kamar, kamar mandi dalam, dilengkapi dengan wasbak/fastavel dan shower. Sedangkan Gedung B dipergunakan mahasiswa putra, dengan kapasitas 96 (Sembilan puluh enam) kamar, kamar mandi dalam, dilengkapi dengan wasbak/fastavel dan shower.</string>
    <string name="sejarah5">      Pada tahun 2006 Rusunawa Undip masih mendapat bantuan dari Kementerian PU Penataan Lingkungan membuat drainase, talud dan pavingisasi seluruh komplek Rusunawa Gedung A, B, C dan D.</string>
    <string name="sejarah6">      Pada tahun 2007 Rusunawa bersama dengan bagian Pengelolaan Aset dan Rumah Tangga Undip. melakukan pembangunan pagar didepan rusunawa berupa pagar besi dan beton, yang dihiasi dengan batu alam serta membuat talud dan selokan air / drainase sekeliling Rusunawa.</string>
    <string name="sejarah7">      Pada tahun 2008, Rusunawa Universitas Diponegoro melakukan Program penataan ruang dan lingkungan, progam penghijauan dan perawatan tanaman di sekeliling Gedung. Setelah itu dilanjutkan dengan menyusun program pengadaan mebelair dan merencanakan penyusunan program penerimaan hunian, kesekretariatan serta penambahan karyawan kebersihan dan keamanan.</string>
</resources>