<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandasanHukum"

    android:id="@+id/drawer_layout_landasan"
    android:background="@color/background1">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navdrawer_view"
        app:headerLayout="@layout/navdrawer_header"
        app:menu="@menu/navdrawer_menu"
        android:layout_gravity="start"
        app:itemIconTint="@color/button"
        app:itemTextColor="@color/button"
        android:backgroundTint="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:navigationIcon="@drawable/ic_menu"
            android:id="@+id/toolbar"
            android:elevation="4dp"
            android:background="@color/white"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/homesemar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logosemar"
                android:layout_marginEnd="56dp"/>

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Landasan Hukum"
                    android:padding="5dp"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"/>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/visi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="60dp"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/landasan1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landasan_hukum1"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="20dp"
                            android:textSize="15dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:justificationMode="inter_word"/>

                        <TextView
                            android:id="@+id/landasan2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landasan_hukum2"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="8dp"
                            android:textSize="15dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:justificationMode="inter_word"/>

                        <TextView
                            android:id="@+id/landasan3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landasan_hukum3"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="8dp"
                            android:textSize="15dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:justificationMode="inter_word"/>

                        <TextView
                            android:id="@+id/landasan4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landasan_hukum4"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="8dp"
                            android:textSize="15dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:justificationMode="inter_word"/>

                        <TextView
                            android:id="@+id/landasan5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landasan_hukum5"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="8dp"
                            android:textSize="15dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:justificationMode="inter_word"/>

                        <TextView
                            android:id="@+id/landasan6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landasan_hukum6"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="8dp"
                            android:textSize="15dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:justificationMode="inter_word"/>

                        <TextView
                            android:id="@+id/landasan7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landasan_hukum7"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="8dp"
                            android:textSize="15dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:justificationMode="inter_word"/>

                        <TextView
                            android:id="@+id/landasan8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landasan_hukum8"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="8dp"
                            android:textSize="15dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:justificationMode="inter_word"/>

                        <TextView
                            android:id="@+id/landasan9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landasan_hukum9"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="8dp"
                            android:textSize="15dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:justificationMode="inter_word"/>

                        <TextView
                            android:id="@+id/landasan10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landasan_hukum10"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="8dp"
                            android:textSize="15dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:justificationMode="inter_word"/>

                        <TextView
                            android:id="@+id/landasan11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landasan_hukum11"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="8dp"
                            android:textSize="15dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:justificationMode="inter_word"/>

                        <TextView
                            android:id="@+id/landasan12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landasan_hukum12"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="8dp"
                            android:textSize="15dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:justificationMode="inter_word"/>

                        <TextView
                            android:id="@+id/landasan13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landasan_hukum13"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="8dp"
                            android:textSize="15dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:justificationMode="inter_word"/>

                        <TextView
                            android:id="@+id/landasan14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landasan_hukum14"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="8dp"
                            android:textSize="15dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:justificationMode="inter_word"/>

                        <TextView
                            android:id="@+id/landasan15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landasan_hukum15"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="8dp"
                            android:textSize="15dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:justificationMode="inter_word"/>

                        <TextView
                            android:id="@+id/landasan16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landasan_hukum16"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="8dp"
                            android:textSize="15dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:justificationMode="inter_word"/>

                        <TextView
                            android:id="@+id/landasan17"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landasan_hukum17"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="8dp"
                            android:textSize="15dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:justificationMode="inter_word"/>

                        <TextView
                            android:id="@+id/landasan18"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landasan_hukum18"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="8dp"
                            android:textSize="15dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:justificationMode="inter_word"/>

                        <TextView
                            android:id="@+id/landasan19"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landasan_hukum19"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:paddingTop="8dp"
                            android:paddingBottom="20dp"
                            android:textSize="15dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:justificationMode="inter_word"/>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>



            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bottom_background"
            android:elevation="2dp"
            app:itemIconSize="25dp"
            app:itemIconTint="@drawable/item_selector"
            app:itemRippleColor="@android:color/transparent"
            app:labelVisibilityMode="unlabeled"
            app:menu="@menu/bottomnav_menu" />

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>